<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="div">/</string>
    <string name="multiply">x</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="dot">•</string>
    <string name="backspace">←</string>
    <string name="clear">C</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="equals">=</string>
    <string name="more"><![CDATA[>]]></string>
    <string name="less"><![CDATA[<]]></string>
    <string name="colon">:</string>
    <string name="question">\?</string>
    <string name="error">Ошибка записи выражения!</string>
</resources>